11/21/12 rename FieldDisplay -> FieldOutsideDisplay
11/21/12 provide needle size in constructors for field inside and outside the magnet
11/21/12 compute grid spacing for field visualization
11/21/12 update field when magnet orientation changes
11/21/12 first wag at field visualization, hardcoded grid spacing
11/21/12 disable debug output in model
11/21/12 fixed bug with "Flip Polarity" button
11/21/12 remove orientation and alpha args from CompassNeedleDisplay, these are available on supertype
11/21/12 create a specialization of compass needle that knows its location, for use in b-field grid
11/21/12 provide canvas dimensions to field visualization
11/21/12 add module for faraday-html
11/21/12 switch to textfield for entering magnet strength, slider is brain damaged
11/21/12 add HTML slider for magnet strength (doesn't work on FireFox, textfield is substituted)
11/21/12 set alpha of "inside field" display object based on strength of magnet
11/21/12 add Range type
11/21/12 wire up FieldDisplay to magnet model
11/21/12 use a static grid of needles for "inside field", modulate alpha of parent display object based on magnet strength
11/21/12 wire up "See Inside" check box
11/21/12 move DragHandler to common
11/21/12 use arg type checking in ModelViewTransform2D
11/21/12 rename ModelViewTransform to ModelViewTransform2D
11/21/12 rename Dimension to Dimension2D
11/21/12 rename Vector to Vector2D
11/21/12 replace Easel.Point with Point2D
11/21/12 make Vector mutable
11/20/12 scoping bug fix in FieldInsideDisplay
11/20/12 add visualization of field inside magnet
11/20/12 apply default IntelliJ formatting throughout
11/20/12 implement control panel using static connection method
11/20/12 fix: account for magnet orientation when computing b-field vector
11/20/12 update compass orientation when magnet orientation changes
11/20/12 add remaining parts to compass display object (no kinematics yet)
11/20/12 add compass ring, make needle size match Java sim