@@ -68,13 +68,13 @@ define( [
                 } );
 
                 // Register for synchronization with model.
-                var thisDisplayObject = this;
+                var that = this;
 
                 // @param {Point2D} location
                 function updateLocation( location ) {
                     var point = mvt.modelToView( location );
-                    thisDisplayObject.x = point.x;
-                    thisDisplayObject.y = point.y;
+                    that.x = point.x;
+                    that.y = point.y;
                 }
                 compass.location.addObserver( updateLocation );
 
@@ -86,7 +86,7 @@ define( [
 
                 // @param {Boolean} visible
                 function updateVisibility( visible ) {
-                    thisDisplayObject.visible = visible;
+                    that.visible = visible;
                 }
                 compass.visible.addObserver( updateVisibility );
 
